force-app/main/default/objects/Web_3_Video__c/Web_3_Video__c.object-meta.xml
<CustomObject>
    <label>Web 3 Video</label>
    <nameField>
        <displayFormat>Web3-{0000000}</displayFormat>
        <label>Web 3 Video Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web 3 Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>