force-app/main/default/objects/Web_3_Video__c/fields/AuthorFirst__c.field-meta.xml
<CustomField>
    <fullName>AuthorFirst__c</fullName>
    <label>Author First</label>
    <length>50</length>
    <type>Text</type>
</CustomField>