force-app/main/default/objects/Web_3_Video__c/fields/AuthorLast__c.field-meta.xml
<CustomField>
    <fullName>AuthorLast__c</fullName>
    <label>Author Last</label>
    <length>50</length>
    <type>Text</type>
</CustomField>