force-app/main/default/objects/Web_3_Video__c/fields/DescriptionRequired__c.field-meta.xml
<CustomField>
    <fullName>DescriptionRequired__c</fullName>
    <label>Description Required</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>