force-app/main/default/objects/Web_3_Video__c/fields/OtherImportantInformation__c.field-meta.xml
<CustomField>
    <fullName>OtherImportantInformation__c</fullName>
    <label>Other Important Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>