force-app/main/default/objects/Web_3_Video__c/fields/PublicationName__c.field-meta.xml
<CustomField>
    <fullName>PublicationName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publication Name</label>
    <referenceTo>Publications__c</referenceTo>
    <relationshipLabel>Web 3 Videos</relationshipLabel>
    <relationshipName>Web_3_Videos</relationshipName>
    <type>Lookup</type>
</CustomField>