force-app/main/default/objects/Web_3_Video__c/fields/Web3_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Web3_Video_URL__c</fullName>
    <label>Web3 Video URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>