force-app/main/default/objects/Web_3_Video__c/fields/Web3VideoName__c.field-meta.xml
<CustomField>
    <fullName>Web3VideoName__c</fullName>
    <label>Web 3 Video Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>