force-app/main/default/objects/Web_3_Video__c/fields/Web3VideoTopic__c.field-meta.xml
<CustomField>
    <fullName>Web3VideoTopic__c</fullName>
    <label>Web 3 Video Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altcoin</fullName>
            </value>
            <value>
                <fullName>Bitcoin</fullName>
            </value>
            <value>
                <fullName>Bitcoin Cash</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Coin</fullName>
            </value>
            <value>
                <fullName>Coinbase</fullName>
            </value>
            <value>
                <fullName>Cold Wallet/Cold Storage</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Decentralization</fullName>
            </value>
            <value>
                <fullName>Decentralized Finance (DeFi)</fullName>
            </value>
            <value>
                <fullName>Decentralized Applications (DApps)</fullName>
            </value>
            <value>
                <fullName>Digital Gold</fullName>
            </value>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Fork</fullName>
            </value>
            <value>
                <fullName>Genesis Block</fullName>
            </value>
            <value>
                <fullName>HODL</fullName>
            </value>
            <value>
                <fullName>Halving</fullName>
            </value>
            <value>
                <fullName>Hash</fullName>
            </value>
            <value>
                <fullName>Hot Wallet</fullName>
            </value>
            <value>
                <fullName>Initial Coin Offering (ICO)</fullName>
            </value>
            <value>
                <fullName>Market Capitalization</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Non-fungible Tokens (NFTs)</fullName>
            </value>
            <value>
                <fullName>Peer-to-peer</fullName>
            </value>
            <value>
                <fullName>Public Key</fullName>
            </value>
            <value>
                <fullName>Private Key</fullName>
            </value>
            <value>
                <fullName>Satoshi Nakomoto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>