force-app/main/default/objects/Web_3_Video__c/fields/Web_3_Video_Summary__c.field-meta.xml
<CustomField>
    <fullName>Web_3_Video_Summary__c</fullName>
    <label>Web 3 Video Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>