force-app/main/default/objects/Web_3_Video__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Web3VideoName__c</columns>
    <columns>Web3_Video_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>